--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
+message.auth.login.info-error=\uC544\uC774\uB514 \uD639\uC740 \uBE44\uBC00\uBC88\uD638\uB97C \uD655\uC778\uD574\uC8FC\uC138\uC694.
 message.auth.login.id=\uC544\uC774\uB514\uB97C \uD655\uC778\uD574 \uC8FC\uC138\uC694.
 message.auth.login.password=\uBE44\uBC00\uBC88\uD638\uB97C \uD655\uC778\uD574 \uC8FC\uC138\uC694.
 message.menu.access.denied=\uD574\uB2F9\uBA54\uB274 \uC811\uADFC\uAD8C\uD55C\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
