[COMMIT] - 공지사항 게시판 기본셋팅 및 게시글 작성시 사용하는 에디터 ckeditor 추가적용. - 게시글 작성시 CreatedBy, LastModifiedBy 적용을 위한 LoginUserAuditorAware 추가

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,7 @@ message.auth.login.id=\uC544\uC774\uB514\uB97C \uD655\uC778\uD574 \uC8FC\uC138\u
 message.auth.login.password=\uBE44\uBC00\uBC88\uD638\uB97C \uD655\uC778\uD574 \uC8FC\uC138\uC694.
 message.menu.access.denied=\uD574\uB2F9\uBA54\uB274 \uC811\uADFC\uAD8C\uD55C\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
 message.menu.access.noway=\uC811\uC18D \uAC00\uB2A5\uD55C \uBA54\uB274\uAC00 \uC5C6\uC2B5\uB2C8\uB2E4.
+
+message.board.notice.unknown.target=\uAC8C\uC2DC\uAE00\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
+message.board.notice.title=\uCD5C\uB300 255\uC790 \uAE4C\uC9C0\uC785\uB2C8\uB2E4.
+message.board.notice.content=\uCD5C\uB300 4000\uC790 \uAE4C\uC9C0\uC785\uB2C8\uB2E4.
