[COMMIT] - 공지사항, 커뮤니티 게시판 기본구조 적용 추후 권한관련 추가 예정

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,14 @@ message.auth.login.password=\uBE44\uBC00\uBC88\uD638\uB97C \uD655\uC778\uD574 \u
 message.menu.access.denied=\uD574\uB2F9\uBA54\uB274 \uC811\uADFC\uAD8C\uD55C\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
 message.menu.access.noway=\uC811\uC18D \uAC00\uB2A5\uD55C \uBA54\uB274\uAC00 \uC5C6\uC2B5\uB2C8\uB2E4.
 
-message.board.notice.unknown.target=\uAC8C\uC2DC\uAE00\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
+message.board.common.unknown.target=\uAC8C\uC2DC\uAE00\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
+
 message.board.notice.title=\uCD5C\uB300 255\uC790 \uAE4C\uC9C0\uC785\uB2C8\uB2E4.
 message.board.notice.content=\uCD5C\uB300 4000\uC790 \uAE4C\uC9C0\uC785\uB2C8\uB2E4.
+message.board.notice.delete-success=\uC0AD\uC81C\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
+
+message.board.community.title=\uCD5C\uB300 255\uC790 \uAE4C\uC9C0\uC785\uB2C8\uB2E4.
+message.board.community.content=\uCD5C\uB300 4000\uC790 \uAE4C\uC9C0\uC785\uB2C8\uB2E4.
+message.board.community.delete-success=\uC0AD\uC81C\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
+
+
