--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,11 @@
+common.valid.required=\uD544\uC218\uC785\uB825 \uD56D\uBAA9 \uC785\uB2C8\uB2E4.
+common.valid.pwd.format=11~20\uC790\uC758 \uC601\uBB38,\uC22B\uC790,\uD2B9\uC218\uBB38\uC790 \uC870\uD569\uC73C\uB85C\uB9CC \uC0AC\uC6A9 \uAC00\uB2A5 \uD569\uB2C8\uB2E4.
+common.valid.email.format=\uC774\uBA54\uC77C \uD615\uC2DD\uC774 \uC544\uB2D9\uB2C8\uB2E4.
+
+message.common.error=\uCC98\uB9AC\uC911\uC5D0\uB7EC\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E4.
+
+message.admin.common.unknown.target=\uC870\uD68C\uB300\uC0C1\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
+
 message.auth.login.info-error=\uC544\uC774\uB514 \uD639\uC740 \uBE44\uBC00\uBC88\uD638\uB97C \uD655\uC778\uD574\uC8FC\uC138\uC694.
 message.auth.login.id=\uC544\uC774\uB514\uB97C \uD655\uC778\uD574 \uC8FC\uC138\uC694.
 message.auth.login.password=\uBE44\uBC00\uBC88\uD638\uB97C \uD655\uC778\uD574 \uC8FC\uC138\uC694.
