[COMMIT] - 어드민그룹관리 추가.

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -5,6 +5,8 @@ common.valid.email.format=\uC774\uBA54\uC77C \uD615\uC2DD\uC774 \uC544\uB2D9\uB2
 message.common.error=\uCC98\uB9AC\uC911\uC5D0\uB7EC\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E4.
 
 message.admin.common.unknown.target=\uC870\uD68C\uB300\uC0C1\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
+message.admin.group.common.unknown.target=\uC870\uD68C\uB300\uC0C1\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
+message.admin.group.in-use=\uD604\uC7AC \uC0AC\uC6A9\uC911\uC778 \uC5B4\uB4DC\uBBFC\uADF8\uB8F9\uC785\uB2C8\uB2E4.
 
 message.auth.login.info-error=\uC544\uC774\uB514 \uD639\uC740 \uBE44\uBC00\uBC88\uD638\uB97C \uD655\uC778\uD574\uC8FC\uC138\uC694.
 message.auth.login.id=\uC544\uC774\uB514\uB97C \uD655\uC778\uD574 \uC8FC\uC138\uC694.
